--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -41,7 +41,7 @@ jobs:
 
   deploy:
     needs: build
-    runs-on: [self-hosted]
+    runs-on: [springapp-runner]
     steps:
       - name: Pull Image from DockerHub
         run: docker pull cripyv/spring-actions-ec2-demo:latest
